--- a/refs.bib
+++ b/refs.bib
@@ -2198,6 +2198,24 @@ series = {RecSys '18}
   publisher={New York University Press}
 }
 
+@article{Beel2016Reproducibility,
+author = {Beel, Joeran and Breitinger, Corinna and Langer, Stefan and Lommatzsch, Andreas and Gipp, Bela},
+title = {Towards Reproducibility in Recommender-Systems Research},
+year = {2016},
+issue_date = {March     2016},
+publisher = {Kluwer Academic Publishers},
+address = {USA},
+volume = {26},
+number = {1},
+issn = {0924-1868},
+url = {https://doi.org/10.1007/s11257-016-9174-x},
+doi = {10.1007/s11257-016-9174-x},
+journal = {User Modeling and User-Adapted Interaction},
+month = {mar},
+pages = {69–101},
+numpages = {33},
+}
+
 @inproceedings{Chaney2018Homogeneity,
 author = {Chaney, Allison J. B. and Stewart, Brandon M. and Engelhardt, Barbara E.},
 title = {How Algorithmic Confounding in Recommendation Systems Increases Homogeneity and Decreases Utility},
